--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
 
-    <h1>ENDULZATE MEDELLIN</h1>
+    <h1>ENDULZATE MEDELLINs</h1>
 
     <main>
         <section class="imagen_principal">
